# ComfyUI_image_manager

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  __init__.py  api.py  clustering.py  lineage.py  nodes.py  pyproject.toml  workflow_parser.py
docs/adr/: 0001-dual-storage-sidecar-and-sqlite.md  0002-parentage-via-managedloadimage-only.md  0003-send-to-comfy-loads-canvas-not-execute.md  0004-embedding-backend-fallback.md  0005-cluster-filmstrip-mutual-exclusion.md  0006-cross-chain-parent-for-forked-roots.md  0007-always-on-card-selection.md  0008-filmstrip-one-row-per-leaf.md  0009-generation-badge-and-chain-color-always-in-tandem.md  0010-sidecar-first-write-order-and-cycle-repair.md  0011-lineage-tree-top-down-layout.md  0012-tree-port-drag-for-reassignment.md  0013-managed-load-image-from-input.md  0014-nested-folder-sidebar.md  0015-send-to-comfy-parent-injection.md
plans/: folder-sidebar.md  image-lineage-display.md  visual-clustering.md
tests/: conftest.py  test_api.py  test_clustering.py  test_deselect_on_lightbox_open.js  test_drag_drop_overlay.js  test_flat_sort.js  test_light_theme.js  test_lightbox_arrow_navigation.js  test_lightbox_prompt_copy.js  test_lineage.py  test_move_to_folder_context_menu.js  test_nodes.py  test_remove_selection_bar.js  test_search_clear.js  test_sidebar_tree.js  test_unlink_parent.py  test_workflow_parser.py
web/: index.html
web/js/: settings.js
